(WIP) Renders lock-screen

--- a/spec/dummy/app/assets/javascripts/application.js.erb
+++ b/spec/dummy/app/assets/javascripts/application.js.erb
@@ -17,5 +17,5 @@
 //= require underscore
 //= require backbone
 //= require jquery.mustache
-//= require cross-lockable/all
+//= require cross_lockable/all
 //= require_tree .
