--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -9,13 +9,14 @@
 
 <div class="container-fluid">
   <div class="content">
-    <h1>DUI application examples</h1>
+    <h1>Cross Lockable application examples</h1>
 
     <%= yield %>
   </div>
 </div>
 
+<%= render_lock_screen options: { url: "#{users_refresh_session_url}/users/refresh_session" } %>
+
 <%= javascript_include_tag "application" %>
-<%= javascript_include_tag "http://js.pusher.com/2.1/pusher.min.js" %>
 </body>
 </html>
