--- a/spec/dummy/app/assets/stylesheets/application.css.scss
+++ b/spec/dummy/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require cross-lockable/all
+ *= require cross_lockable/all
  *= require_tree .
  */
 
