Adding name to cross lockable screen iframe

--- a/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
+++ b/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
@@ -34,5 +34,5 @@
     <% end %>
   </script>
 
-  <iframe id="cross-lockable-iframe"></iframe>
+  <iframe id="cross-lockable-iframe" name="cross-lockable-iframe"></iframe>
 </div>
