--- a/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
+++ b/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
@@ -17,7 +17,7 @@
             <div class="input-prepend">
               <span class="add-on"><i class="icon-asterisk"></i></span>
 
-              <%= f.text_field :password, required: false %>
+              <%= f.password_field :password, required: false %>
 
               <span class="help-block lock-screen-error hide">Senha inválida.</span>
             </div>
