--- a/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
+++ b/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
@@ -19,7 +19,7 @@
 
               <%= f.password_field :password, required: false %>
 
-              <span class="help-block lock-screen-error hide">Senha inválida.</span>
+              <span class="help-block lock-screen-error">Senha inválida.</span>
             </div>
           </div>
         </div>
