Fixing internationalization and letting the user from now on to define the stop that he wants to use.

--- a/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
+++ b/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
@@ -40,6 +40,12 @@ $overlayZIndex: 1000000;
   }
 
   .cross-lockable-screen-box {
+
+    .input-prepend {
+      margin-top: 15px;
+      margin-bottom: 5px;
+    }
+
     position: absolute;
     z-index: $overlayZIndex + 2;
 
