Adding the red border to the password field when the password is invalid

--- a/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
+++ b/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
@@ -100,7 +100,12 @@ $overlayZIndex: 1000000;
   }
 
   &.cross-lockable-error {
+
     .cross-lockable-screen-box {
+      input {
+        background: none repeat scroll 0 0 #FAF2F2;
+      }
+
       .help-block {
         visibility: visible;
       }
