Letting the user define the expiration time that will prompt the lock screen

--- a/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
+++ b/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
@@ -1,4 +1,4 @@
-<div class="cross-lockable-screen" data-cross-lockable-origin="<%= origin %>">
+<div class="cross-lockable-screen" data-cross-lockable-origin="<%= origin %>" data-cross-lockable-expiration-time="<%= expiration_time %>">
   <div class="cross-lockable-screen-box"></div>
 
   <script type="text/html" data-template-name="cross-lockable-screen">
