--- a/spec/dummy/app/views/home/index.html.erb
+++ b/spec/dummy/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Cross Lockable</h1>
 
-<%= render_lock_screen scope: current_user,
-                       url: cross_lockable.users_refresh_session_url,
-                       return_to: cross_lockable.users_session_refreshed_url %>
+<%= render_lock_screen  scope: current_user,
+                        expiration_time: 3000,
+                        url: cross_lockable.users_refresh_session_url,
+                        return_to: cross_lockable.users_session_refreshed_url %>
+
