--- a/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
+++ b/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
@@ -100,14 +100,18 @@ $overlayZIndex: 1000000;
   }
 
   &.cross-lockable-error {
-
     .cross-lockable-screen-box {
-      input {
-        background: none repeat scroll 0 0 #FAF2F2;
+      .control-group {
+        input, .add-on {
+          color: #b94a48;
+          border-color: #b94a48;
+          background: none repeat scroll 0 0 #FAF2F2;
+        }
       }
 
       .help-block {
         visibility: visible;
+        color: #b94a48;
       }
     }
   }
