Rendering description of lock screen with raw html

--- a/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
+++ b/app/views/cross_lockable/lock_screen/_lock_screen.html.erb
@@ -6,7 +6,7 @@
 
       <h2><%= title %></h2>
 
-      <p><%= description %></p>
+      <p><%= raw description %></p>
 
       <fieldset>
         <%= hidden_field_tag :token, CrossLockable::TokenGenerator.generate_security_token %>
