--- a/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
+++ b/app/assets/stylesheets/cross_lockable/cross-lockable-screen.css.scss
@@ -4,8 +4,13 @@
 @import "compass/css3/box-sizing";
 @import "compass/css3/filter";
 
+@import "bootstrap/variables";
+
 $lockScreenBoxWidth: 400px;
 $lockScreenBoxHeight: 270px;
+
+$lockScreenBoxSmallWidth: 300px;
+$lockScreenBoxSmallHeight: 320px;
 $overlayZIndex: 1000000;
 
 .cross-lockable-screen {
@@ -40,20 +45,13 @@ $overlayZIndex: 1000000;
   }
 
   .cross-lockable-screen-box {
-
-    .input-prepend {
-      margin-top: 15px;
-      margin-bottom: 5px;
-    }
-
-    position: absolute;
+    position: relative;
     z-index: $overlayZIndex + 2;
 
-    top: 50%;
-    left: 50%;
+    top: 100px;
 
-    margin-top: -$lockScreenBoxHeight / 2;
-    margin-left: -$lockScreenBoxWidth / 2;
+    margin: auto;
+    padding: 10px;
 
     width: $lockScreenBoxWidth;
     height: $lockScreenBoxHeight;
@@ -67,8 +65,6 @@ $overlayZIndex: 1000000;
 
     text-align: center;
 
-    padding: 10px;
-
     form {
       margin-top: 15px;
     }
@@ -77,15 +73,15 @@ $overlayZIndex: 1000000;
       margin: 0;
     }
 
-    fieldset, .control-group {
-      margin-bottom: 0;
+    input {
+      height: 33px;
     }
 
     .help-block {
       font-size: 12px;
       display: block;
       visibility: hidden;
-      opacity: 1;
+      opacity: 0;
       margin: 2px 0 0;
 
       @include transition(visibility 0.2s ease, opacity 0.2s ease);
@@ -101,18 +97,28 @@ $overlayZIndex: 1000000;
 
   &.cross-lockable-error {
     .cross-lockable-screen-box {
-      .control-group {
-        input, .add-on {
-          color: #b94a48;
-          border-color: #b94a48;
-          background: none repeat scroll 0 0 #FAF2F2;
+      .form-group {
+        input, .input-group-addon {
+          color: #a94442;
+          border-color: #a94442;
+          background-color: #f2dede;
         }
       }
 
       .help-block {
         visibility: visible;
-        color: #b94a48;
+        opacity: 1;
+        color: #a94442;
       }
     }
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  .cross-lockable-screen .cross-lockable-screen-box {
+    top: 50px;
+
+    width: $lockScreenBoxSmallWidth;
+    height: $lockScreenBoxSmallHeight;
   }
 }
